Improved User API and fixed doc issues
